--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -17,5 +17,5 @@
 
 <resources>
 
-    <style name="Theme.TaskCompleted" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ComposeQuadrant" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
