--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2023 The Android Open Source Project.
+  ~ Copyright (C) 2023 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,7 +15,11 @@
   ~ limitations under the License.
   -->
 <resources>
-    <dimen name="padding_small">8dp</dimen>
-    <dimen name="padding_medium">16dp</dimen>
-    <dimen name="image_size">64dp</dimen>
+
+    <dimen name="button_corner_radius">40dp</dimen>
+    <dimen name="button_interior_padding">24dp</dimen>
+    <dimen name="padding_vertical">32dp</dimen>
+    <dimen name="button_image_width">128dp</dimen>
+    <dimen name="button_image_height">160dp</dimen>
+
 </resources>
